// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> When nested in a RadioGroup should match the snapshot for a checked radio 1`] = `
<div
  class="radioGroup"
>
  <div
    class="root radio"
  >
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="focusRect"
    />
    <span
      class="root detail2 label"
    >
      radio label 1
    </span>
  </div>
  <div
    class="root radio"
  >
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="focusRect"
    />
    <span
      class="root detail2 label"
    >
      radio label 2
    </span>
  </div>
</div>
`;

exports[`<RadioButton /> When nested in a RadioGroup should match the snapshot for a focused radio 1`] = `
<Radio
  label="radio label 1"
  value="1"
>
  <CheckableBase
    checked={false}
    className="radio"
    handleClick={[Function]}
    inputName="radio"
    inputType="radio"
    label="radio label 1"
    value="1"
  >
    <div
      className="root radio"
    >
      <div
        className="checkable"
      >
        <div
          className="outerCircle"
        />
        <div
          className="innerCircle"
        />
      </div>
      <input
        checked={false}
        className="nativeInput"
        disabled={false}
        name="radio"
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
        value="1"
      />
      <div
        className="focusRect"
      />
      <DetailText
        className="label"
        size="detail-2"
      >
        <span
          className="root detail2 label"
        >
          radio label 1
        </span>
      </DetailText>
    </div>
  </CheckableBase>
</Radio>
`;

exports[`<RadioButton /> When nested in a RadioGroup should match the snapshot for a group of radios 1`] = `
<div
  class="radioGroup"
>
  <div
    class="root radio"
  >
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="focusRect"
    />
    <span
      class="root detail2 label"
    >
      radio label 1
    </span>
  </div>
  <div
    class="root radio"
  >
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="2"
    />
    <div
      class="focusRect"
    />
    <span
      class="root detail2 label"
    >
      radio label 2
    </span>
  </div>
  <div
    class="root radio"
  >
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="3"
    />
    <div
      class="focusRect"
    />
    <span
      class="root detail2 label"
    >
      radio label 3
    </span>
  </div>
  <div
    class="root radio"
  >
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="4"
    />
    <div
      class="focusRect"
    />
    <span
      class="root detail2 label"
    >
      radio label 4
    </span>
  </div>
</div>
`;

exports[`<RadioButton /> When nested in a RadioGroup should match the snapshot for a single radio 1`] = `
<div
  class="radioGroup"
>
  <div
    class="root radio"
  >
    <div
      class="checkable"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <input
      class="nativeInput"
      name="radio"
      type="radio"
      value="1"
    />
    <div
      class="focusRect"
    />
    <span
      class="root detail2 label"
    >
      radio label 1
    </span>
  </div>
</div>
`;

exports[`<RadioButton /> When nested in a RadioGroup should match the snapshot for a single radio with no value or label 1`] = `
<div
  class="radioGroup"
>
  <div
    class="root radio checked"
  >
    <div
      class="checkable selected"
    >
      <div
        class="outerCircle"
      />
      <div
        class="innerCircle"
      />
    </div>
    <input
      checked=""
      class="nativeInput"
      name="radio"
      type="radio"
      value=""
    />
    <div
      class="focusRect"
    />
  </div>
</div>
`;
